ex1 ex2 edits after dry-run

--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -62,6 +62,11 @@
     "!pip install plotly --break-system-packages\n",
     "!pip install nbformat --break-system-packages\n",
     "\n",
+    "!pip uninstall ipykernel -y\n",
+    "!pip uninstall ipython -y\n",
+    "!pip install ipykernel==6.29.5\n",
+    "!pip install ipython==8.36.0\n",
+    "\n",
     "# kernel restart required!!!\n"
    ]
   },
@@ -90,6 +95,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Validate IPython version after kernel restart, it should be at 8.36.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import IPython\n",
+    "print(IPython.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prepare the SAP HANA Cloud connection credential file\n",
     "\n",
     "The Python script further below, will get used to connect this Python environment to the SAP HANA Cloud instance.  \n",
@@ -101,18 +123,22 @@
     "\n",
     "</br>\n",
     "\n",
-    "**Note** Use your username and password supplied by the session instructor to logon to the SAP HANA Cloud database.   \n",
-    "Find the **host_address** in the lesson content  __temp_user.ini__ file.\n",
+    "**Note** SAP HANA Cloud database connection credentials shall get prepared into a file __./ex0/user.ini__, prepare the file and edits of the file as descibed here :  \n",
+    "- Copy the file [./ex0/temp_user.ini](./temp_user.ini) and create a new file __user.ini__ file: \n",
+    "</br> \n",
+    "\n",
+    "![](./images/BAS_python_create_userini.png)\n",
+    "\n",
+    "\n",
+    "- The **host_address** has already been prepared in the file source file __./ex0/temp_user.ini__, and doesn't require to be edited, unless instructed otherwise by the session speaker\n",
+    "- **user** and **password** have been supplied to you by the instructor and have to be updated in the new file __./ex0/user.ini__ file \n",
+    "\n",
     "\n",
     "</br>\n",
     "\n",
-    "👉🏻 **Before running the next cell** make sure:\n",
-    "\n",
-    "1. The content of the [./ex0/temp_user.ini](ex0/temp_user.ini) file is copied to a file [./ex0/user.ini](ex0/user.ini) and \n",
-    "2. the user and the password given to you by the instructor are updated in `user.ini` file \n",
-    "\n",
-    "\n",
-    "👇🏼  \n",
+    "👉🏻 **Before running the next Python cell** to connect to SAP HANA Cloud make sure:\n",
+    "- The content of your file [./ex0/user.ini](./user.ini) is well-prepared  \n",
+    " \n",
     "![Set user](./images/BAS_python_edit_userini.png)"
    ]
   },
