--- a/exercises/ex1/ex1_notebook.ipynb
+++ b/exercises/ex1/ex1_notebook.ipynb
@@ -156,8 +156,8 @@
     "- The [HANA dataframe](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_2_QRC/en-US/hana_ml.dataframe.html#module-hana_ml.dataframe) represents a database query as a hana-ml dataframe object in python, comarable to a pandas dataframe. \n",
     "  - Most HANA dataframe operations are designed to NOT bring data back from the database into the python envrionment, unless it is a small aggregated result set or explicitly requested. \n",
     "- SAP HANA dataframes can be created\n",
-    "    - based on database tables, SQL views and calculation views (incl. parameters), custom SQL statements incl. multi-statements\n",
-    "    - or created from pandas dataframe or spark dataframe."
+    "    - based on database [tables, SQL views and calculation views (incl. parameters)](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_3_QRC/en-US/hana_ml.dataframe.html#hana_ml.dataframe.ConnectionContext.table), [custom SQL statements incl. multi-statements](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_3_QRC/en-US/hana_ml.dataframe.html#hana_ml.dataframe.ConnectionContext.sql)\n",
+    "    - or created from a [pandas dataframe](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_3_QRC/en-US/hana_ml.dataframe.html#hana_ml.dataframe.create_dataframe_from_pandas) | [(see pandas reference)](https://pandas.pydata.org/docs/user_guide/10min.html#basic-data-structures-in-pandas), from a [spark dataframe](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_3_QRC/en-US/hana_ml.dataframe.html#hana_ml.dataframe.create_dataframe_from_spark) | [(see spark reference)](https://spark.apache.org/docs/latest/api/python/user_guide/dataframes.html), or by [import from csv or shapefile](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_3_QRC/en-US/hana_ml.dataframe.html#hana_ml.dataframe.import_csv_from)."
    ]
   },
   {
@@ -268,7 +268,7 @@
     "\n",
     "For an __initial view at the data__, the __head()__- in conjunction with the __collect()-method__ can be used.\n",
     "\n",
-    "- __Only__ when the __collect()-method__ is used, a __HANA dataframe's SQL query result set data__ is actually __transferred into the python envrionment__. \n",
+    "- __Only__ when the __collect()-method__ is used, a __HANA dataframe's SQL query result set data__ is actually __transferred into the python envrionment__ and received as a pandas dataframe. \n",
     "- Therefore, __carefully__ make use of __collect()-method__, best __Do not__ use collect() without any further filtering or aggregation methods applied.\n",
     "- The head()-method for example, adds the TOP N predicate to the SQL select statement"
    ]
@@ -403,8 +403,9 @@
    "id": "3a139801-18d2-4132-9403-0d362dcb746f",
    "metadata": {},
    "source": [
-    "Creating a new HANA dataframe from an existing dataframe\n",
-    "- New dataframe = existing dataframe.\\<methods ...\\>"
+    "Creating a new HANA dataframe from an existing HANA dataframe\n",
+    "- New dataframe = existing dataframe.\\<methods ...\\>\n",
+    "- Note, if you used the collect()-method with the source-dataframe, we would collect in python the results set as a pandas dataframe, thus the new object would be a pandas dataframe."
    ]
   },
   {
@@ -468,7 +469,9 @@
     "The __Isolation Forest__-function in SAP HANA Cloud [PAL SQL reference](https://help.sap.com/docs/hana-cloud-database/sap-hana-cloud-sap-hana-database-predictive-analysis-library/isolation-forest-isolation-forest-11345d9?q=evaluation_metric&locale=en-US&version=LATEST), [hana-ml Python reference](https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/2025_2_QRC/en-US/pal/algorithms/hana_ml.algorithms.pal.preprocessing.IsolationForest.html#isolationforest) builds an __esemble model__ of __multiple decision trees__ (thus called __\"forest\"__). \n",
     "- It tries to detect or isolate outliers based on the assumption that the __decision tree depths__ for __outlier values__ is __shorter__ than the average decision tree depths for normal values.  \n",
     "- It is regarded as a technique also suitable to be applied to large datasets.  \n",
-    "- For additional background reading on algorithm, see also [wikipedia: isolation forest](https://en.wikipedia.org/wiki/Isolation_forest) and [wikipedia: different outlier detection techniques](https://en.wikipedia.org/wiki/Anomaly_detection) for additional background reading.\n",
+    "- For additional background reading on algorithm, see also [wikipedia: isolation forest](https://en.wikipedia.org/wiki/Isolation_forest) and [wikipedia: different outlier detection techniques](https://en.wikipedia.org/wiki/Anomaly_detection) for additional background reading.  \n",
+    "<br>\n",
+    "\n",
     "![](./images/ex1_IF_algorithm.png)\n",
     "\n",
     "Amongst other capabilities, the __SAP HANA Cloud Isolation Forest-functions__ supports for\n",
@@ -641,6 +644,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc18bd0c",
+   "metadata": {},
+   "source": [
+    "Note, SAP HANA Cloud table names preceded with an \"#\", are so-called session local temporary database tables, which will be deleted when the user session is disconnected.\n",
+    "\n",
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d0c631f0-f587-4a7f-9495-17664942dfa8",
@@ -788,7 +801,7 @@
     "The __SHappley Additive Explainations__ can also be utilized with the SAP HANA Cloud __Isolation Forest__-function (since 2025 Q2).\n",
     "- Local AI explainability is activated in the predict function using __show_explainer=True__-parameter, where the explanation output is generated into the REASON_CODE column\n",
     "- Due to its processing impact, it is recommended not to enable it by default and use with __explain_scope__ to explain only the outliers.\n",
-    "- With __top_k_attributions__ we can limit the explanation outout within the REASON_CODE column to the __top k columns within the individual explanations__"
+    "- With __top_k_attributions__ we can limit the explanation output within the REASON_CODE column to the __top k columns within the individual explanations__"
    ]
   },
   {
@@ -889,6 +902,8 @@
    "source": [
     "<br>\n",
     "\n",
+    "Regard this last plot as OPTIONAL - the __Shapley Force plot__ is more of an expert AI explainability plot\n",
+    "\n",
     "The ShapleyExplainer-object, also provides another __local AI explainability__ visualization, the the so-called __Shapley Force plot__.  \n",
     "- As an example to understand the Force Plot, select row 56 in the plot, it shall match ID 57 in the data\n",
     "- Expand the force plot visualization, clicking the \"+\" icon to the left of the row\n",
@@ -913,7 +928,7 @@
    "source": [
     "<br><br>\n",
     "\n",
-    "## Ex 1.3 - Outlier analysis per subgroup using Massive Isolation Forest (optional)"
+    "## Ex 1.3 - Outlier analysis per subgroup using Massive Isolation Forest"
    ]
   },
   {
