--- a/exercises/ex2/ex2_notebook.ipynb
+++ b/exercises/ex2/ex2_notebook.ipynb
@@ -628,6 +628,9 @@
    "id": "76316d38-e416-4aa0-8a3a-ac496554142e",
    "metadata": {},
    "source": [
+    "The sentiment magnitude value indicates the strength of the sentiment detected, while the sentiment score indicates the sentiments direction (negative, neutral or postive)\n",
+    "<br>\n",
+    "\n",
     "![](./images/ta_sentiment-classes.png)\n",
     "<!--- <img src=\"./images/ta_sentiment-classes.png\" width=400 height=150 /> --->"
    ]
