Minor update TechEd on Tour Bangalore

--- a/exercises/ex1/ex1_notebook.ipynb
+++ b/exercises/ex1/ex1_notebook.ipynb
@@ -1578,9 +1578,11 @@
     "                                              '630000': {'n_estimators':50, 'max_samples' : 10000}})\n",
     "\n",
     "filterSQL=f'\"G/L Account\" in (720000, 630000)'\n",
-    "parallel_isof.fit(data=hdf_acdoca_slice.filter(filterSQL), group_key=\"G/L Account\", features=outlier_features)\n",
+    "#.filter(filterSQL)\n",
+    "parallel_isof.fit(data=hdf_acdoca_slice, group_key=\"G/L Account\", features=outlier_features)\n",
     "\n",
-    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id.filter(filterSQL), key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
+    "#.filter(filterSQL)\n",
+    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id, key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
     "                                 group_params={'720000': {'contamination': 0.10}, \n",
     "                                              '630000': {'contamination':  0.025}})\n"
    ]
@@ -1623,7 +1625,9 @@
    "outputs": [],
    "source": [
     "# Massive with reason code\n",
-    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id.filter(filterSQL), key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
+    "\n",
+    "#.filter(filterSQL)\n",
+    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id, key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
     "                       group_params=mygroup_params\n",
     "                       ,show_explainer=True, explain_scope='outliers', top_k_attributions=5\n",
     "                      )\n",
